[gd_scene load_steps=5 format=2]

[ext_resource path="res://Socket.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30.5 )

[node name="MainNode" type="Node"]
script = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 321, 159 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 1, -1.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 2 )
