[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Images/Sphere.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/pngwing.com.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Actor/PlayableCharacter/Player/PlayerHand.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Actor/PlayableCharacter/Player/Player.gd" type="Script" id=4]
[ext_resource path="res://Assets/Audio/magicShoot.mp3" type="AudioStream" id=5]
[ext_resource path="res://Scripts/Misc/Camera.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 39.0288

[node name="PlayerParent" type="Node2D"]
__meta__ = {
"_edit_group_": true
}

[node name="Player" type="KinematicBody2D" parent="."]
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
collision_mask = 16
script = ExtResource( 4 )

[node name="PlayerArea2D" type="Area2D" parent="Player"]
collision_layer = 2
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/PlayerArea2D"]
position = Vector2( 1, -1.5 )
shape = SubResource( 1 )

[node name="PlayerCircle" type="Sprite" parent="Player"]
modulate = Color( 0.0313726, 0.576471, 0.584314, 1 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="PlayerHand" type="Sprite" parent="Player"]
position = Vector2( 56, -2 )
rotation = 1.5708
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="EndOfTheHand" type="Position2D" parent="Player"]
position = Vector2( 78, 0 )

[node name="MagicShotSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 5 )
volume_db = -12.0

[node name="player_is_active" type="Timer" parent="Player"]
wait_time = 5.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1, 0 )
rotation = 1.5708
current = true
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 3.5
script = ExtResource( 8 )

[connection signal="area_entered" from="Player/PlayerArea2D" to="Player" method="_on_PlayerArea2D_area_entered"]
[connection signal="timeout" from="Player/player_is_active" to="Player" method="_on_player_is_active_timeout"]
